# discrete-event-sim

./: .gitignore  Makefile  README.md  constant_submit_rate.py  main.py  main2.py  main3.py  plot.gnuplot  pyproject.toml  result.csv
des/: sim.py  stdlib.py  test_sim.py
plots/: experiment-00.jxl  experiment-01.jxl  experiment-02.jxl  experiment-03.jxl  experiment-04.jxl  experiment-05.jxl  experiment-06.jxl  experiment-07.jxl  experiment-08.jxl  experiment-09.jxl
results/: no-retries.csv  queue-size-01.csv  queue-size-06.csv
