[project]
name = "discrete-event-sim"
version = "0.1.0"
description = "Discrete event simulator prototype"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "frozendict>=2.4.7",
    "numpy>=2.3.5",
    "polars>=1.35.2",
    "pytest>=9.0.1",
    "tqdm>=4.67.1",
]

[tool.pyright]
typeCheckingMode = "standard"
reportUnusedFunction = false

